--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=orders-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/ordersapidb
+spring.datasource.username=docker
+spring.datasource.password=docker
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
