chore: add jpa check nullability config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=docker
 spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.check_nullability=true
 spring.jpa.hibernate.ddl-auto=update
