chore: add spring doc default media type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Configuration
 jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
+
+# Swagger UI Configuration
+springdoc.default-produces-media-type=application/json
