--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
+
+# JWT Configuration
+jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
