--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Make Maven wrapper executable
+        run: chmod +x ./mvnw
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -35,6 +38,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Make Maven wrapper executable
+        run: chmod +x ./mvnw
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
