--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,18 +18,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     
-    - name: List files and check mvnw permissions
-      run: |
-        pwd
-        ls -la
-        ls -la mvnw || echo "mvnw not found"
-    
-    - name: Ensure Maven wrapper is executable
-      run: |
-        sudo chmod +x mvnw
-        chmod u+x mvnw
-        chmod 755 mvnw
-    
     - name: Configure H2 Database for Unit Tests
       run: |
         sed -i 's|spring.datasource.url=.*|spring.datasource.url=jdbc:h2:mem:testdb|g' src/main/resources/application.properties
@@ -39,12 +27,7 @@ jobs:
         sed -i 's|spring.jpa.database-platform=.*|spring.jpa.database-platform=org.hibernate.dialect.H2Dialect|g' src/main/resources/application.properties
     
     - name: Run Unit Tests
-      run: |
-        if [ ! -x mvnw ]; then
-          echo "Maven wrapper is not executable"
-          exit 1
-        fi
-        ./mvnw test -Dtest="*UnitTest"
+      run: mvn test -Dtest="*UnitTest"
   
   integration-tests:
     runs-on: ubuntu-latest
@@ -59,12 +42,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     
-    - name: Ensure Maven wrapper is executable
-      run: |
-        sudo chmod +x mvnw
-        chmod u+x mvnw
-        chmod 755 mvnw
-    
     - name: Configure H2 Database for Integration Tests
       run: |
         sed -i 's|spring.datasource.url=.*|spring.datasource.url=jdbc:h2:mem:testdb|g' src/main/resources/application.properties
@@ -74,9 +51,4 @@ jobs:
         sed -i 's|spring.jpa.database-platform=.*|spring.jpa.database-platform=org.hibernate.dialect.H2Dialect|g' src/main/resources/application.properties
     
     - name: Run Integration Tests
-      run: |
-        if [ ! -x mvnw ]; then
-          echo "Maven wrapper is not executable"
-          exit 1
-        fi
-        ./mvnw test -Dtest="*IntegrationTest"
+      run: mvn test -Dtest="*IntegrationTest"
